--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cffi==1.14.6
 charset-normalizer==2.0.6
 dj-database-url==0.5.0
 Django==3.2.7
-django-ipware==4.0.0
+django-countries==7.2.1
 gunicorn==20.1.0
 idna==3.2
 psycopg2==2.9.1
